Add filter command for events and todos